force-app/main/default/objects/StopBangQuestionnaire__c/StopBangQuestionnaire__c.object-meta.xml
<CustomObject>
    <label>StopBangQuestionnaire</label>
    <nameField>
        <label>StopBangQuestionnaire Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>StopBangQuestionnaires</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>