force-app/main/default/objects/StopBangQuestionnaire__c/fields/BMIOver35__c.field-meta.xml
<CustomField>
    <fullName>BMIOver35__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BMIOver35</label>
    <type>Checkbox</type>
</CustomField>