force-app/main/default/objects/StopBangQuestionnaire__c/fields/FeelsTired__c.field-meta.xml
<CustomField>
    <fullName>FeelsTired__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FeelsTired</label>
    <type>Checkbox</type>
</CustomField>