force-app/main/default/objects/StopBangQuestionnaire__c/fields/HighBloodPressure__c.field-meta.xml
<CustomField>
    <fullName>HighBloodPressure__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HighBloodPressure</label>
    <type>Checkbox</type>
</CustomField>