force-app/main/default/objects/StopBangQuestionnaire__c/fields/IsMale__c.field-meta.xml
<CustomField>
    <fullName>IsMale__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsMale</label>
    <type>Checkbox</type>
</CustomField>