force-app/main/default/objects/StopBangQuestionnaire__c/fields/NeckOver40cm__c.field-meta.xml
<CustomField>
    <fullName>NeckOver40cm__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NeckOver40cm</label>
    <type>Checkbox</type>
</CustomField>