force-app/main/default/objects/StopBangQuestionnaire__c/fields/ObservedNotBreathing__c.field-meta.xml
<CustomField>
    <fullName>ObservedNotBreathing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ObservedNotBreathing</label>
    <type>Checkbox</type>
</CustomField>