force-app/main/default/objects/StopBangQuestionnaire__c/fields/Over50__c.field-meta.xml
<CustomField>
    <fullName>Over50__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Over50</label>
    <type>Checkbox</type>
</CustomField>