force-app/main/default/objects/StopBangQuestionnaire__c/fields/Snores__c.field-meta.xml
<CustomField>
    <fullName>Snores__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Snores</label>
    <type>Checkbox</type>
</CustomField>